# appmotor

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  rules
doc/: advancedapplauncherd.dox  dbus.dox  debug.dox  doxygen-impldoc.conf  doxygen-mdeclarativecache.conf  doxygen-userdoc.conf  eboost.dox  invokerparameters.dox  limitations.dox  mainpage.dox  mdeclarativecache_mainpage.dox  qmlboost.dox  qtboost.dox  singleinstance.dox  tipsandtricks.dox  usingcmake.dox  usingpkgconfig.dox  usingqmake.dox
scripts/: booster-cgroup-mount  libraries_meego.py  library-helper.py
src/: CMakeLists.txt
src/common/: coverage.h  protocol.h  report.c  report.h
src/invoker/: CMakeLists.txt  invokelib.c  invokelib.h  invoker.c  search.c  search.h
src/launcherlib/: CMakeLists.txt  appdata.cpp  appdata.h  booster.cpp  booster.h  connection.cpp  connection.h  daemon.cpp  daemon.h  launcherlib.h  logger.cpp  logger.h  singleinstance.cpp  singleinstance.h  socketmanager.cpp  socketmanager.h
src/long-appmotor/: CMakeLists.txt  long-appmotor.cpp  long-appmotor.h  long-appmotor.service
src/single-instance/: CMakeLists.txt  main.cpp
